fixed gif alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,42 +15,19 @@
   font-family: 'Sunshiney';
   font-size: 20px;
   float: right;
-
 }
 /*where gifs are displayed*/
 #gifArea {
   width:60%;
   padding-top: 20px;
-
+  float: left;
 }
-.gifBox {
+#enterCharacter {
   display: inline-block;
+  float: right;
 }
 /*gifs*/
-.gifImg {
+.gifs, .gifBox {
   display: inline-block;
-  padding: 15px;
+  padding:1px;
 }
-
-#newCharacterDiv {
-
-}
-
-
-
-
-
-/*768*/
-@media (min-width: @screen-sm-min) {
-  #character-form {
-    margin-right: 25px;
-    margin-top: -1500px;
-  }
-
-}
-
-/* Medium devices (desktops, 992px and up) */
-@media (min-width: @screen-md-min) { ... }
-
-/* Large devices (large desktops, 1200px and up) */
-@media (min-width: @screen-lg-min) { ... }
